--- a/openIn.ipynb
+++ b/openIn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -241,15 +241,19 @@
       "Found existing installation: torch 2.2.1\n",
       "Uninstalling torch-2.2.1:\n",
       "  Successfully uninstalled torch-2.2.1\n",
-      "\u001b[33mWARNING: Skipping torchvision as it is not installed.\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Skipping torchaudio as it is not installed.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Found existing installation: torchvision 0.17.1\n",
+      "Uninstalling torchvision-0.17.1:\n",
+      "  Successfully uninstalled torchvision-0.17.1\n",
+      "Found existing installation: torchaudio 2.2.1\n",
+      "Uninstalling torchaudio-2.2.1:\n",
+      "  Successfully uninstalled torchaudio-2.2.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Collecting torch\n",
       "  Using cached torch-2.2.1-cp311-none-macosx_11_0_arm64.whl.metadata (25 kB)\n",
       "Collecting torchvision\n",
-      "  Downloading torchvision-0.17.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
+      "  Using cached torchvision-0.17.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
       "Collecting torchaudio\n",
-      "  Downloading torchaudio-2.2.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.4 kB)\n",
+      "  Using cached torchaudio-2.2.1-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.4 kB)\n",
       "Requirement already satisfied: filelock in ./.conda/lib/python3.11/site-packages (from torch) (3.13.1)\n",
       "Requirement already satisfied: typing-extensions>=4.8.0 in ./.conda/lib/python3.11/site-packages (from torch) (4.9.0)\n",
       "Requirement already satisfied: sympy in ./.conda/lib/python3.11/site-packages (from torch) (1.12)\n",
@@ -261,11 +265,9 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in ./.conda/lib/python3.11/site-packages (from jinja2->torch) (2.1.5)\n",
       "Requirement already satisfied: mpmath>=0.19 in ./.conda/lib/python3.11/site-packages (from sympy->torch) (1.3.0)\n",
       "Using cached torch-2.2.1-cp311-none-macosx_11_0_arm64.whl (59.7 MB)\n",
-      "Downloading torchvision-0.17.1-cp311-cp311-macosx_11_0_arm64.whl (1.6 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
-      "\u001b[?25hDownloading torchaudio-2.2.1-cp311-cp311-macosx_11_0_arm64.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m29.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m31m36.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: torch, torchvision, torchaudio\n",
+      "Using cached torchvision-0.17.1-cp311-cp311-macosx_11_0_arm64.whl (1.6 MB)\n",
+      "Using cached torchaudio-2.2.1-cp311-cp311-macosx_11_0_arm64.whl (1.8 MB)\n",
+      "Installing collected packages: torch, torchvision, torchaudio\n",
       "Successfully installed torch-2.2.1 torchaudio-2.2.1 torchvision-0.17.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -337,15 +339,73 @@
       "In general, try to **make plans** with as few steps as possible. As for actually executing code to carry out that plan, for *stateful* languages (like python, javascript, shell, but NOT for html which starts from 0 every time) **it's critical not to try to do everything in one code block.** You should try something, print information about it, then continue from there in tiny, informed steps. You will never get it on the first try, and attempting it in one go will often lead to errors you cant see.\n",
       "You are capable of **any** task.\n",
       "\n",
-      "# THE COMPUTER API\n",
       "\n",
       "\n",
       "Run shell commands with -y so the user doesn't have to confirm them.\n",
       "\n",
       "when opening a website, do it in the default browser using apple script: open location _\n",
-      "\n",
-      "Ask your question\n",
-      "You said: open Wikipedia\n",
+      "before opening a website check to make sure that the user isnt asking to open an app\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(interpreter.system_message)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def recordAndTranscribe():\n",
+    "    speechRecognizer = sr.Recognizer()\n",
+    "    with sr.Microphone() as source:\n",
+    "        speechRecognizer.pause_threshold = 5\n",
+    "        speechRecognizer.adjust_for_ambient_noise(source)\n",
+    "        print(\"\\nAsk your question\")\n",
+    "        try:\n",
+    "            audio = speechRecognizer.listen(source, phrase_time_limit=5)\n",
+    "        except sr.WaitTimeoutError:\n",
+    "            print(\"Sorry, I didn't hear anything. Please try again.\")\n",
+    "            return None\n",
+    "    try:\n",
+    "        recognizedText = speechRecognizer.recognize_google(audio)\n",
+    "        if (\n",
+    "            \"exit\" in recognizedText.lower()\n",
+    "            or \"quit\" in recognizedText.lower()\n",
+    "            or \"goodbye\" in recognizedText.lower()\n",
+    "            or \"bye\" in recognizedText.lower()\n",
+    "        ):\n",
+    "            print(\"bye!\")\n",
+    "            sys.exit()\n",
+    "        print(\"You said:\", recognizedText)\n",
+    "        return recognizedText\n",
+    "    except sr.UnknownValueError:\n",
+    "        print(\"Sorry, I didn't understand that.\")\n",
+    "        return None\n",
+    "    \n",
+    "def chatWithInterpreter(prompt):\n",
+    "    \"\"\"Send a message to the interpreter and returns the response.\"\"\"\n",
+    "    if prompt:\n",
+    "        response = interpreter.chat(prompt)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     },
@@ -432,7 +492,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc4b057e84da424d8b65cf08645aa328",
+       "model_id": "e69a5d4ff9d54733898b02c47bb2b71c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +516,31 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cb34cf244f54ed38522f169047b4be3",
+       "model_id": "5ddb115c8a3947609faa88856c56bddc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d160253a3974ba0b10055a9857b1add",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,45 +563,7 @@
     }
    ],
    "source": [
-    "\n",
-    "print(interpreter.system_message)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def recordAndTranscribe():\n",
-    "    speechRecognizer = sr.Recognizer()\n",
-    "    with sr.Microphone() as source:\n",
-    "        speechRecognizer.pause_threshold = 5\n",
-    "        speechRecognizer.adjust_for_ambient_noise(source)\n",
-    "        print(\"\\nAsk your question\")\n",
-    "        try:\n",
-    "            audio = speechRecognizer.listen(source, phrase_time_limit=5)\n",
-    "        except sr.WaitTimeoutError:\n",
-    "            print(\"Sorry, I didn't hear anything. Please try again.\")\n",
-    "            return None\n",
-    "    try:\n",
-    "        recognizedText = speechRecognizer.recognize_google(audio)\n",
-    "        if (\n",
-    "            \"exit\" in recognizedText.lower()\n",
-    "            or \"quit\" in recognizedText.lower()\n",
-    "            or \"goodbye\" in recognizedText.lower()\n",
-    "            or \"bye\" in recognizedText.lower()\n",
-    "        ):\n",
-    "            print(\"bye!\")\n",
-    "            sys.exit()\n",
-    "        print(\"You said:\", recognizedText)\n",
-    "        return recognizedText\n",
-    "    except sr.UnknownValueError:\n",
-    "        print(\"Sorry, I didn't understand that.\")\n",
-    "        return None\n",
-    "    \n",
-    "def chatWithInterpreter(prompt):\n",
-    "    \"\"\"Send a message to the interpreter and returns the response.\"\"\"\n",
-    "    if prompt:\n",
-    "        response = interpreter.chat(prompt)\n",
-    "    \n",
-    "chatWithInterpreter(recordAndTranscribe())"
+    "chatWithInterpreter(\"\"\"open arc\"\"\")"
    ]
   }
  ],
