style: :art: folders introduced

--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -7,14 +7,12 @@
    "outputs": [],
    "source": [
     "%pip install open-interpreter\n",
-    "%pip uninstall whisper -y\n",
-    "%pip install -U openai-whisper\n",
-    "%pip install git+https://github.com/openai/whisper.git -q\n",
     "%pip install speechRecognition\n",
     "%pip install ipywidgets\n",
     "%pip install pyaudio\n",
     "%pip uninstall -y torch torchvision torchaudio\n",
-    "%pip install torch torchvision torchaudio\n"
+    "%pip install torch torchvision torchaudio\n",
+    "%pip install python-dotenv"
    ]
   },
   {
@@ -30,7 +28,6 @@
     "    count_tokens,\n",
     ")\n",
     "import os\n",
-    "import whisper\n",
     "import speech_recognition as sr\n",
     "import pyaudio\n",
     "\n",
