style: :art: Removed unnecessary cell

--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -86,15 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(interpreter.system_message)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "chatWithInterpreter(\"\"\"open wikipedia\"\"\")\n"
    ]
   },
@@ -113,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"open arc\"\"\")\n"
+    "chatWithInterpreter(\"\"\"open the arc browser by the browser company\"\"\")\n"
    ]
   },
   {
