fix(commands): :zap: upgrade open interpreter command added

--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -12,7 +12,8 @@
     "%pip install pyaudio\n",
     "%pip uninstall -y torch torchvision torchaudio\n",
     "%pip install torch torchvision torchaudio\n",
-    "%pip install python-dotenv"
+    "%pip install python-dotenv\n",
+    "%pip install --upgrade open-interpreter"
    ]
   },
   {
