--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -38,13 +38,21 @@
     "interpreter.llm.api_key = os.environ.get(\"API_KEY_ANTHROPIC\")\n",
     "\n",
     "interpreter.llm.model = (\n",
-    "    \"claude-3-haiku-20240307\"  # Tells OI to send messages in OpenAI's format\n",
+    "    \"claude-3-haiku-20240307\"  # haiku is perfect for this\n",
+    "    # \"claude-3-opus-20240229\" # too slow but very powerful\n",
+    "    # \"claude-3-sonnet-20240229\" # sonnet is awful at code\n",
+    "    \n",
     ")\n",
     "interpreter.system_message = open(\"systemMessage.md\").read()\n",
     "interpreter.auto_run = True  # Don't require user confirmation\n",
     "\n",
     "# baseModelWhisper = whisper.load_model(\"base.en\")\n",
     "\n",
+    "interpreter.llm.temperature = 0\n",
+    "\n",
+    "interpreter.llm.context_window = 30000\n",
+    "\n",
+    "interpreter.llm.max_tokens = 3000\n",
     "\n",
     "\n",
     "def recordAndTranscribe():\n",
@@ -87,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"open wikipedia\"\"\")\n"
+    "chatWithInterpreter(\"open wikipedia\")\n"
    ]
   },
   {
@@ -96,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"search for a chocolate chip cookie recipe\"\"\")"
+    "chatWithInterpreter(\"search for a chocolate chip cookie recipe\")"
    ]
   },
   {
@@ -105,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"open the arc browser by the browser company\"\"\")\n"
+    "chatWithInterpreter(\"open the 'arc the browser'\")\n"
    ]
   },
   {
@@ -114,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"open outlook\"\"\")\n"
+    "chatWithInterpreter(\"open outlook\")\n"
    ]
   },
   {
@@ -123,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"give me the history of koenigsegg.\"\"\")\n"
+    "chatWithInterpreter(\"give me the history of koenigsegg.\")\n"
    ]
   },
   {
@@ -132,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"start the screen saver\"\"\")"
+    "chatWithInterpreter(\"start the screen saver\")"
    ]
   },
   {
@@ -141,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"what is the weather like in new york?\"\"\")"
+    "chatWithInterpreter(\"what is the weather like in new york?\")"
    ]
   },
   {
@@ -150,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"pause the media\"\"\")"
+    "chatWithInterpreter(\"pause the media\")"
    ]
   },
   {
@@ -159,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"start mission control\"\"\")"
+    "chatWithInterpreter(\"start mission control\")"
    ]
   },
   {
@@ -168,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"\"\"mute the volume\"\"\")"
+    "chatWithInterpreter(\"mute the volume\")"
    ]
   }
  ],
