perf: :zap: trying gpt 4
its really good

--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -36,7 +36,15 @@
     "import requests\n",
     "\n",
     "load_dotenv()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interpreter = OpenInterpreter()\n",
     "interpreter.llm.api_key = os.environ.get(\"API_KEY_ANTHROPIC\")\n",
     "\n",
@@ -45,7 +53,31 @@
     "    # \"claude-3-opus-20240229\" # too slow but very powerful\n",
     "    # \"claude-3-sonnet-20240229\" # sonnet is awful at code\n",
     "    \n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpreter = OpenInterpreter()\n",
+    "interpreter.llm.api_key = os.environ.get(\"API_KEY_OPENAI_INVIS_INC\")\n",
+    "\n",
+    "interpreter.llm.model = (\n",
+    "    \"gpt-4-0125-preview\"\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "interpreter.system_message = open(\"systemMessage.md\").read()\n",
     "interpreter.auto_run = True  # Don't require user confirmation\n",
     "\n",
@@ -53,9 +85,9 @@
     "\n",
     "interpreter.llm.temperature = 0\n",
     "\n",
-    "interpreter.llm.context_window = 30000\n",
+    "# interpreter.llm.context_window = 30000\n",
     "\n",
-    "interpreter.llm.max_tokens = 3000\n",
+    "# interpreter.llm.max_tokens = 3000\n",
     "\n",
     "\n",
     "def recordAndTranscribe():\n",
@@ -188,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chatWithInterpreter(\"send an email to jimmy about our meeting on friday\") "
+    "chatWithInterpreter(\"send an email to jimmy about our meeting on friday\") # wont work without os mode in python"
    ]
   }
  ],
