--- a/important/openIn.ipynb
+++ b/important/openIn.ipynb
@@ -6,16 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install open-interpreter\n",
     "%pip install speechRecognition\n",
     "%pip install ipywidgets\n",
     "%pip install pyaudio\n",
     "%pip uninstall -y torch torchvision torchaudio\n",
     "%pip install torch torchvision torchaudio\n",
     "%pip install python-dotenv\n",
-    "%pip install --upgrade open-interpreter\n",
     "%pip install computer\n",
-    "%pip install requests"
+    "%pip install requests\n",
+    "%pip uninstall open-interpreter\n",
+    "%pip install git+https://github.com/OpenInterpreter/open-interpreter.git\n",
+    "%pip install --upgrade --force-reinstall git+https://github.com/OpenInterpreter/open-interpreter.git\n"
    ]
   },
   {
@@ -240,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
